px/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> px
Rule 1     px -> key_value
Rule 2     px -> px key_value
Rule 3     key_value -> key EQUAL values
Rule 4     key -> key_with_translation
Rule 5     key -> simple_key
Rule 6     simple_key -> UNQUOTED_STRING
Rule 7     key_with_translation -> UNQUOTED_STRING LSQUARE UNQUOTED_STRING RSQUARE
Rule 8     key -> UNQUOTED_STRING LSQUARE STRING RSQUARE LPAREN STRING RPAREN
Rule 9     values -> values DELIMITER value
Rule 10    values -> value
Rule 11    value -> UNQUOTED_STRING
Rule 12    value -> FLOAT
Rule 13    value -> INT
Rule 14    value -> STRING

Terminals, with rules where they appear

DELIMITER            : 9
EQUAL                : 3
FLOAT                : 12
INT                  : 13
LPAREN               : 8
LSQUARE              : 7 8
RPAREN               : 8
RSQUARE              : 7 8
STRING               : 8 8 14
UNQUOTED_STRING      : 6 7 7 8 11
error                :

Nonterminals, with rules where they appear

key                  : 3
key_value            : 1 2
key_with_translation : 4
px                   : 2 0
simple_key           : 5
value                : 9 10
values               : 3 9

Parsing method: LALR

state 0

    (0) S' -> . px
    (1) px -> . key_value
    (2) px -> . px key_value
    (3) key_value -> . key EQUAL values
    (4) key -> . key_with_translation
    (5) key -> . simple_key
    (8) key -> . UNQUOTED_STRING LSQUARE STRING RSQUARE LPAREN STRING RPAREN
    (7) key_with_translation -> . UNQUOTED_STRING LSQUARE UNQUOTED_STRING RSQUARE
    (6) simple_key -> . UNQUOTED_STRING

    UNQUOTED_STRING shift and go to state 6

    px                             shift and go to state 1
    key_value                      shift and go to state 2
    key                            shift and go to state 3
    key_with_translation           shift and go to state 4
    simple_key                     shift and go to state 5

state 1

    (0) S' -> px .
    (2) px -> px . key_value
    (3) key_value -> . key EQUAL values
    (4) key -> . key_with_translation
    (5) key -> . simple_key
    (8) key -> . UNQUOTED_STRING LSQUARE STRING RSQUARE LPAREN STRING RPAREN
    (7) key_with_translation -> . UNQUOTED_STRING LSQUARE UNQUOTED_STRING RSQUARE
    (6) simple_key -> . UNQUOTED_STRING

    UNQUOTED_STRING shift and go to state 6

    key_value                      shift and go to state 7
    key                            shift and go to state 3
    key_with_translation           shift and go to state 4
    simple_key                     shift and go to state 5

state 2

    (1) px -> key_value .

    UNQUOTED_STRING reduce using rule 1 (px -> key_value .)
    $end            reduce using rule 1 (px -> key_value .)


state 3

    (3) key_value -> key . EQUAL values

    EQUAL           shift and go to state 8


state 4

    (4) key -> key_with_translation .

    EQUAL           reduce using rule 4 (key -> key_with_translation .)


state 5

    (5) key -> simple_key .

    EQUAL           reduce using rule 5 (key -> simple_key .)


state 6

    (8) key -> UNQUOTED_STRING . LSQUARE STRING RSQUARE LPAREN STRING RPAREN
    (7) key_with_translation -> UNQUOTED_STRING . LSQUARE UNQUOTED_STRING RSQUARE
    (6) simple_key -> UNQUOTED_STRING .

    LSQUARE         shift and go to state 9
    EQUAL           reduce using rule 6 (simple_key -> UNQUOTED_STRING .)


state 7

    (2) px -> px key_value .

    UNQUOTED_STRING reduce using rule 2 (px -> px key_value .)
    $end            reduce using rule 2 (px -> px key_value .)


state 8

    (3) key_value -> key EQUAL . values
    (9) values -> . values DELIMITER value
    (10) values -> . value
    (11) value -> . UNQUOTED_STRING
    (12) value -> . FLOAT
    (13) value -> . INT
    (14) value -> . STRING

    UNQUOTED_STRING shift and go to state 12
    FLOAT           shift and go to state 13
    INT             shift and go to state 14
    STRING          shift and go to state 15

    values                         shift and go to state 10
    value                          shift and go to state 11

state 9

    (8) key -> UNQUOTED_STRING LSQUARE . STRING RSQUARE LPAREN STRING RPAREN
    (7) key_with_translation -> UNQUOTED_STRING LSQUARE . UNQUOTED_STRING RSQUARE

    STRING          shift and go to state 17
    UNQUOTED_STRING shift and go to state 16


state 10

    (3) key_value -> key EQUAL values .
    (9) values -> values . DELIMITER value

    UNQUOTED_STRING reduce using rule 3 (key_value -> key EQUAL values .)
    $end            reduce using rule 3 (key_value -> key EQUAL values .)
    DELIMITER       shift and go to state 18


state 11

    (10) values -> value .

    DELIMITER       reduce using rule 10 (values -> value .)
    UNQUOTED_STRING reduce using rule 10 (values -> value .)
    $end            reduce using rule 10 (values -> value .)


state 12

    (11) value -> UNQUOTED_STRING .

    DELIMITER       reduce using rule 11 (value -> UNQUOTED_STRING .)
    UNQUOTED_STRING reduce using rule 11 (value -> UNQUOTED_STRING .)
    $end            reduce using rule 11 (value -> UNQUOTED_STRING .)


state 13

    (12) value -> FLOAT .

    DELIMITER       reduce using rule 12 (value -> FLOAT .)
    UNQUOTED_STRING reduce using rule 12 (value -> FLOAT .)
    $end            reduce using rule 12 (value -> FLOAT .)


state 14

    (13) value -> INT .

    DELIMITER       reduce using rule 13 (value -> INT .)
    UNQUOTED_STRING reduce using rule 13 (value -> INT .)
    $end            reduce using rule 13 (value -> INT .)


state 15

    (14) value -> STRING .

    DELIMITER       reduce using rule 14 (value -> STRING .)
    UNQUOTED_STRING reduce using rule 14 (value -> STRING .)
    $end            reduce using rule 14 (value -> STRING .)


state 16

    (7) key_with_translation -> UNQUOTED_STRING LSQUARE UNQUOTED_STRING . RSQUARE

    RSQUARE         shift and go to state 19


state 17

    (8) key -> UNQUOTED_STRING LSQUARE STRING . RSQUARE LPAREN STRING RPAREN

    RSQUARE         shift and go to state 20


state 18

    (9) values -> values DELIMITER . value
    (11) value -> . UNQUOTED_STRING
    (12) value -> . FLOAT
    (13) value -> . INT
    (14) value -> . STRING

    UNQUOTED_STRING shift and go to state 12
    FLOAT           shift and go to state 13
    INT             shift and go to state 14
    STRING          shift and go to state 15

    value                          shift and go to state 21

state 19

    (7) key_with_translation -> UNQUOTED_STRING LSQUARE UNQUOTED_STRING RSQUARE .

    EQUAL           reduce using rule 7 (key_with_translation -> UNQUOTED_STRING LSQUARE UNQUOTED_STRING RSQUARE .)


state 20

    (8) key -> UNQUOTED_STRING LSQUARE STRING RSQUARE . LPAREN STRING RPAREN

    LPAREN          shift and go to state 22


state 21

    (9) values -> values DELIMITER value .

    DELIMITER       reduce using rule 9 (values -> values DELIMITER value .)
    UNQUOTED_STRING reduce using rule 9 (values -> values DELIMITER value .)
    $end            reduce using rule 9 (values -> values DELIMITER value .)


state 22

    (8) key -> UNQUOTED_STRING LSQUARE STRING RSQUARE LPAREN . STRING RPAREN

    STRING          shift and go to state 23


state 23

    (8) key -> UNQUOTED_STRING LSQUARE STRING RSQUARE LPAREN STRING . RPAREN

    RPAREN          shift and go to state 24


state 24

    (8) key -> UNQUOTED_STRING LSQUARE STRING RSQUARE LPAREN STRING RPAREN .

    EQUAL           reduce using rule 8 (key -> UNQUOTED_STRING LSQUARE STRING RSQUARE LPAREN STRING RPAREN .)
